Fixes: contacts alignment, will be available soon, page title sticky.

--- a/frontend/src/app/modules/contacts/contact-item/contact-item.component.scss
+++ b/frontend/src/app/modules/contacts/contact-item/contact-item.component.scss
@@ -1,7 +1,6 @@
 @import 'variables';
 
 .contact-item {
-  min-width: 400px;
   margin: auto;
   position: relative;
 
