--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -62,6 +62,15 @@ a {
   width: 100vw;
 }
 
+.page-title-wrapper {
+  width: 100%;
+  padding-bottom: 10px;
+  background: white;
+  position: sticky;
+  top: $header-height;
+  z-index: 999;
+}
+
 .page-title {
   width: fit-content;
   padding: 10px 15px;
